2003-06-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: optimize FileCopyPeerFDStream speed by writing out
	  data by portions of >=PUT_LL_MIN or by timeout 0.1 second.
	* buffer.cc, buffer.h: add put_ll_timer in IOBufferFDStream too.
	* FileSet.cc: remove unneeded type casting.
	* GetJob.cc: create FileCopyPeerFDStream for file: url scheme.
	  This fixes closing and re-opening output file when transfer
	  breaks and restarts. Besides, it is slightly faster.
	* Http.cc: turn off sending plain password in URI along with
	  Authorization in hftp.
	* Timer.h: add Stop method.
	* ftpclass.cc, ftpclass.h, resource.cc: new settings ftp:use-size
	  and ftp:use-mdtm.

2003-06-16  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: set exit_code in CMD(help) (reported
	  by trancefx@mindspring.com).

2003-06-03  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't assign NO_SIZE when SIZE returned 0.
	* commands.cc: set exit_code=0 properly in builtin_lftp
	  (reported by trancefx@mindspring.com).

2003-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: send password always in hftp, even along with Authorization
	  header. This is required for some proxies (reported by Onno Benschop).
	* ftpclass.cc: fixed catching of file size from 150 server message.
	* lftp.cc: load and save histories only when user interaction happens.

2003-05-23  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: move Exclude to after file type setting. This
	  fixes exclude/include of directories on local side.
	* commands.cc: new command `.tasks'.
	* complete.cc: don't show hidden commands in completion.
	* ftpclass.cc, ftpclass.h: fix borrowing not-logged-in connection.

2003-05-23  Diego Reyes <dreyes@bancofrances.com.ar>

	* ResMgr.cc: (DirReadable, FileReadable) fix a bug.

2003-05-14  Geoffrey Lee <glee@gnupilgrims.org>

	* Http.cc: fix a problem with empty path; change it to "/".

2003-04-30  Alexander V. Lukyanov <lav@yars.free.net>
